2013-06-23  Juanma Barranquero  <lekktu@gmail.com>

	* emacs-lisp/tabulated-list.el (tabulated-list-init-header):
	Don't skip aligning the next header field when padding is 0;
	otherwise, field width is not respected unless the title is as
	wide as the field.

2013-06-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* emacs-lisp/package.el (package-el-version): Remove.
	(package-process-define-package): Fix inf-loop.
	(package-install): Allow symbols as arguments again.

2013-06-22  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-font-lock-keywords): Move `catch',
	add some more keyword-like methods.
	http://lists.gnu.org/archive/html/emacs-devel/2013-06/msg00911.html

2013-06-22  Juanma Barranquero  <lekktu@gmail.com>

	* bs.el (bs-buffer-show-mark): Make defvar-local.
	(bs-mode): Use setq-local.

	* emacs-lock.el (emacs-lock-mode, emacs-lock--old-mode)
	(emacs-lock--try-unlocking): Make defvar-local.

2013-06-22  Glenn Morris  <rgm@fencepost.gnu.org>

	* play/cookie1.el (cookie-apropos): Minor simplification.

	* progmodes/gdb-mi.el (gdb-mapcar*): Remove, replace with cl-mapcar.

2013-06-22  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (auto-mode-alist): Do not use
	`regexp-opt', it breaks the build during dumping.

2013-06-21  Dmitry Gutov  <dgutov@yandex.ru>

	* progmodes/ruby-mode.el (ruby-font-lock-keywords): Highlight
	keyword-like methods on Kernel and Module with
	font-lock-builtin-face.
	(auto-mode-alist): Consolidate different entries into one regexp
	and add more *file-s.

2013-06-21  Stephen Berman  <stephen.berman@gmx.net>

	* obsolete/otodo-mode.el: Move and rename from calendar/todo-mode.el.

	* calendar/diary-lib.el (diary-goto-entry-function): New variable.
	(diary-entry): Use it in the action of this button type instead of
	diary-goto-entry.

	* calendar/todo-mode.el: New version.
	(todo-add-category): Append new category to end of file and give
	it the highest number, instead of putting it at the beginning and